  * added po/th.po:
    - thanks to Sira Nokyoonhtong 
  * merge lp:~tomeu/software-center/bug-fixes that makes the 
    "No screenshot available" text translatable, thanks to
    Tomeu Vizoso

  [ Gary Lasker ]
  * softwarecenter/view/viewswitcher.py:
    - add support for using the up/down arrow keys to select
      items in the navigation pane (LP: #517271)
  * Implement channel views (XXXXXX)

 -- Gary Lasker <gary.lasker@canonical.com>  Thu, 04 Feb 2010 18:03:27 -0800

software-center (1.1.10) lucid; urgency=low

  [ Michael Vogt ]
  * softwarecenter/distro/aptutils.py:
    - removed, moved into python-apt
  * softwarecenter/view/appview.py:
    - ignore negative ratings (LP: #510409)
  * softwarecenter/db/database.py:
    - assert we have a popcon_max value
  * debian/control:
    - updated dependencies to latest python-apt
  * softwarecenter/view/availablepane.py:
    - fix name for Search Results (LP: #504379)
  * softwarecenter/view/installedpane.py:
    - add Search Results pathbar
  * debian/control:
    - drop python-sexy from the dependencies
  * softwarecenter/view/widgets/searchentry.py:
    - merge patch from Javier Jardón to use gtk.Entry instead
      of sexy.Entry (LP: #506811) - many thanks!
  * merged from  lp:~gary-lasker/software-center/active_app,
    many thanks!
  * softwarecenter/distro/Ubuntu.py:
    - add support for the new "Supported" tag in the Packages file
  * merged lp:~mmcg069/software-center/bug-fixes with lots of nice
    fixes in the pathbar and appview code (many thanks!)

  [ Gary Lasker ]
  * softwarecenter/view/widgets/pathbar2.py,
    softwarecenter/app.py,
    data/ui/SoftwareCenter.ui:
    - add support for using backspace key to navigate up one
      level in the hierarchy (LP: #509783)
  * softwarecenter/app.py, softwarecenter/view/installedpane.py,
    softwarecenter/view/softwarepane.py:
    - fixes in the on_application_selected() code
  * softwarecenter/view/installedpane.py,