@@ -14,8 +14,10 @@ software-center (1.1.11) UNRELEASED; urgency=low
     - add support for using the up/down arrow keys to select
       items in the navigation pane (LP: #517271)
   * Implement channel views (XXXXXX)
+  * po/software-center.pot:
+    - refresh
 
- -- Gary Lasker <gary.lasker@canonical.com>  Thu, 04 Feb 2010 18:03:27 -0800
+ -- Gary Lasker <gary.lasker@canonical.com>  Mon, 08 Feb 2010 21:02:41 -0500
 
 software-center (1.1.10) lucid; urgency=low
 
